--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,7 @@
 </head>
 
 <body>
-  <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-  <a href="./partials/login.html">login and registration</a><br>
+  <!-- <a href="./partials/login.html">login and registration</a><br>
   <a href="./partials/refund.html">refund</a><br>
   <a href="./partials/payment.html">payment</a><br>
   <a href="./partials/catalog.html">catalog</a><br>
@@ -21,9 +20,8 @@
   <a href="./partials/after-order.html">thanks for the order</a><br>
   <a href="./partials/policy.html">policy</a><br>
   <a href="./partials/order.html">order</a><br>
-  <a href="./partials/product.html">product</a><br>
-  <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-  <!-- <script src="./index.js"></script> -->
+  <a href="./partials/product.html">product</a><br> -->
+
 </body>
 
 </html>
