--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <!-- <a href="./partials/login.html">login and registration</a><br>
+  <a href="./partials/login.html">login and registration</a><br>
   <a href="./partials/refund.html">refund</a><br>
   <a href="./partials/payment.html">payment</a><br>
   <a href="./partials/catalog.html">catalog</a><br>
@@ -20,7 +20,7 @@
   <a href="./partials/after-order.html">thanks for the order</a><br>
   <a href="./partials/policy.html">policy</a><br>
   <a href="./partials/order.html">order</a><br>
-  <a href="./partials/product.html">product</a><br> -->
+  <a href="./partials/product.html">product</a><br>
 
 </body>
 
