--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 
-<body>
+<body class="preload">
   <a href="./partials/login.html">login and registration</a><br>
   <a href="./partials/refund.html">refund</a><br>
   <a href="./partials/payment.html">payment</a><br>
@@ -20,6 +20,12 @@
   <a href="./partials/order.html">order</a><br>
   <a href="./partials/product.html">product</a><br>
   <a href="./partials/home.html">home</a><br>
+
+  <button class="js-openModalBtn" type="button">open modal window</button>
+
+
+  <include src="./partials/modal.html"></include>
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
